src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ChildNotSupported2.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!-- We are testing here that children under a DO not implementing IAddChild/IList gives error -->

<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
    <Rectangle>
	<DockPanel />
    </Rectangle>
</Canvas>
</Page>
